# filefly

./: .gitignore  README.md  bun.lockb  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ports.md  turbo.json
__tests__/cognito/: package-lock.json  package.json
__tests__/prisma/: package-lock.json  script.ts
__tests__/prisma-postgres/: package-lock.json  package.json
__tests__/prisma-postgres-next/: package.json  pnpm-lock.yaml
apps/api/: .gitignore  Dockerfile  docker-compose.yml  package.json  pyproject.toml
apps/api/app/: main.py  producer.py  rabbitmq.py
apps/api/app/db/: insertion.py
apps/api/app/db/vector/: insertion.py  methods.py
apps/api/app/loaders/: google.py
apps/api/app/processors/: document.py  function_map.py  image.py
apps/api/app/processors/audio/: types.py
apps/api/app/processors/code/: processor.py  types.py
apps/api/app/processors/document/: document.py  types.py
apps/api/app/processors/image/: image.py  processor.py  types.py
apps/api/app/processors/slideshow/: processor.py
apps/api/app/processors/spreadsheet/: processor.py  types.py
apps/api/app/processors/video/: types.py
apps/api/app/providers/: google.py
apps/api/app/routes/: auth.py
apps/api/app/routes/auth/: route.py
apps/api/app/routes/index/: route.py
apps/api/app/tasks/: deletion.py  extraction.py  vectorization.py
apps/api/app/utils/: embedding.py
apps/api/bootstrap/: init.py  schemas.py
apps/api/bootstrap/weaviate_db/: schemas.py
apps/api/prisma/: schema.prisma
apps/api/prisma/migrations/20241016021406_init/: migration.sql
apps/api/src/: main.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/api/src/providers/: google.service.ts
apps/api/src/users/: users.module.ts  users.service.ts
apps/api/test/: test.py
apps/api/utils/: chunking.py  embedding.py
apps/consumer/: pyproject.toml
apps/consumer/app/: consumer.py  main.py
apps/consumer/app/db/postgres/: delete.py
apps/consumer/app/db/vector/: client.py  deletion.py  insertion.py  methods.py  schemas.py
apps/consumer/app/processors/: function_map.py
apps/consumer/app/providers/: api.py  google.py
apps/consumer/app/tasks/: vectorization.py
apps/consumer/bootstrap/: init.py
apps/consumer/bootstrap/weaviate_db/: weaviate.py
apps/express-server/: package.json
apps/server/: .eslintrc.js  Dockerfile  file.json  gdrive-file.json  package-lock.json  package.json  pnpm-lock.yaml
apps/web/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
docker/: api.Dockerfile  consumer.Dockerfile  rmq.Dockerfile  server.Dockerfile  web.Dockerfile
notebooks/ocr/: easyocr.ipynb  kerasocr.ipynb  (+2 more)
scripts/: create_gdrive_collection.sh  generate_token.sh  reset_db.sh
(+160 files in other folders)
