[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Mark Shteyn <markshteyn1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
prisma = "^0.15.0"
python-multipart = "^0.0.20"
pika = "^1.3.2"
aio-pika = "^9.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"