[tool.poetry]
name = "consumer"
version = "0.1.0"
description = ""
authors = ["Mark Shteyn <markshteyn1@gmail.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pika = "^1.3.2"
google-api-python-client = "^2.154.0"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
weaviate-client = "^4.10.1"
openai = "^1.57.4"
requests = "^2.32.3"
aio-pika = "^9.5.4"
prisma = "^0.15.0"
pydantic = "^2.10.4"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
